tests/fixtures/invalid/int_floordiv_bytes.py
# Cannot floor divide Int by Bytes
x: int = 1 // b"hello"
